# public-vector-db-visualizer

./: .gitignore  Cargo.toml  README.md  _headers  build.bat  build.ps1  build.sh  index.html  package.json  web_config.js
cloudflare/worker/: wrangler.toml
cloudflare/worker/src/: index.ts
functions/: [[path]].ts  api.ts
functions/api/: [[path]].ts  index.ts
src/: lib.rs  math.rs  trainer.rs  turso.rs
src/brain/: linalg.rs  mod.rs  model.rs  projection.rs
src/train/: wiki.rs
