[package]
name = "vecors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_text",
    "bevy_ui",
    "webgl2",
    "tonemapping_luts",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "MouseEvent"] }
lazy_static = "1.4"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["v4", "js"] }
interpolation = "0.3"
bincode = "1.3"
parking_lot = "0.12"
futures-util = "0.3"

# Trainer-only dependencies (Native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
bzip2 = "0.4"
quick-xml = { version = "0.31", features = ["async-tokio"] }
regex = "1"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

[[bin]]
name = "trainer"
path = "src/trainer.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
